<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TriangleActivity">

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/a_hint"
              android:gravity="end"
              android:id="@+id/text_a"
              android:layout_marginVertical="15dp"
              app:layout_constraintTop_toTopOf="parent"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="51dp"
              android:hint="@string/b_hint"
              android:gravity="end"
              android:id="@+id/text_b"
              android:layout_marginVertical="15dp"
              app:layout_constraintTop_toBottomOf="@+id/text_a"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/c_hint"
              android:gravity="end"
              android:id="@+id/text_c"
              android:layout_marginVertical="15dp"
              app:layout_constraintTop_toBottomOf="@+id/text_b"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/but_ps3"
            android:text="@string/ps_button"
            app:layout_constraintTop_toBottomOf="@+id/text_c"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/but_back3"
            android:text="@string/back_but"
            app:layout_constraintBottom_toTopOf="@+id/text_p3"
    />
    <TextView
            android:text="@string/p_text"
            android:textSize="24sp"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_p3"
            app:layout_constraintBottom_toTopOf="@+id/text_s3"
    />
    <TextView
            android:text="@string/s_text"
            android:textSize="24sp"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_s3"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</android.support.constraint.ConstraintLayout>