<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RectangleActivity"
        tools:ignore="MissingConstraints">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/w_hint"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/text_w"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_hint"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@+id/text_w"
            android:id="@+id/text_h"
    />
    <Button
            android:text="@string/ps_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/but_ps2"
            app:layout_constraintTop_toBottomOf="@+id/text_h"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/but_back2"
            android:text="@string/back_but"
            app:layout_constraintBottom_toTopOf="@+id/text_p2"
    />
    <TextView
            android:text="@string/p_text"
            android:textSize="24sp"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/text_p2"
            app:layout_constraintBottom_toTopOf="@+id/text_s2"
    />
    <TextView
            android:text="@string/s_text"
            android:textSize="24sp"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_s2"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>